--- a/oshealthrec-website/public/doktor/mitarbeiter-suche.html
+++ b/oshealthrec-website/public/doktor/mitarbeiter-suche.html
@@ -47,9 +47,9 @@
     <div class="row">
         <div class="col-sm-5">
             <form>
-                <input type="text" class="form-control mb-2" id="inputVorname" placeholder="Vorname">
-                <input type="text" class="form-control mb-2" id="inputNachname" placeholder="Nachname">
-                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" placeholder="Gebutsdatum">
+                <input type="text" class="form-control mb-2" id="inputVorname" onkeyup="filterEmployeeTable()" placeholder="Vorname">
+                <input type="text" class="form-control mb-2" id="inputNachname" onkeyup="filterEmployeeTable()" placeholder="Nachname">
+                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterEmployeeTable()" placeholder="Gebutsdatum">
             </form>
         </div>
     </div>
