--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -68,6 +68,7 @@
                     <th scope="col">Titel</th>
                     <th scope="col">Beschreibung</th>
                     <th scope="col">Datum</th>
+                    <th scope="col">Hochgeladen von</th>
                     <th></th>
                 </tr>
                 </thead>
