--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -55,6 +55,7 @@
                         <th scope="col">Titel</th>
                         <th scope="col">Beschreibung</th>
                         <th scope="col">Datum</th>
+                        <th scope="col">Hochgeladen von</th>
                     </tr>
                 </thead>
                 <tbody id="reportTabelle">
