--- a/oshealthrec-website/public/patient/dokumente.html
+++ b/oshealthrec-website/public/patient/dokumente.html
@@ -42,7 +42,10 @@
     <div class="row">
         <div class="col-sm-6">
             <form class="form-group form-inline">
-                <input type="text" class="form-control mr-3" id="suche" placeholder="Suchebgriff" style="width: 400px">
+                <input type="text" class="form-control mr-3" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel" style="width: 400px">
+                <input type="text" class="form-control mr-3" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung" style="width: 400px">
+                <input type="text" class="form-control mr-3" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum" style="width: 400px">
+                <input type="text" class="form-control mr-3" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von" style="width: 400px">
             </form>
         </div>
     </div>
