--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -45,8 +45,11 @@
                 <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
             </form>
         </div>
+        <div class="col-2">
+
+        </div>
         <div class="col-6">
-            <dl class="row mt-3 ml-5">
+            <dl class="row mt-3">
                 <dt class="col-sm-2">Vorname</dt>
                 <dd class="col-sm-10" id="vorname"></dd>
 
