--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -49,7 +49,7 @@
 
         </div>
         <div class="col-6">
-            <dl class="row mt-3">
+            <dl class="row">
                 <dt class="col-sm-2">Vorname</dt>
                 <dd class="col-sm-10" id="vorname"></dd>
 
