--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -39,36 +39,37 @@
 </nav>
 
 <div class="container">
-    <div class="row">
-        <div class="col-6">
-            <dl class="row mt-3">
-                <dt class="col-sm-2">Vorname</dt>
-                <dd class="col-sm-10" id="vorname"></dd>
+    <div class="col-sm-4">
+        <form>
+            <input type="text" class="form-control mb-2 mr-5" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
+            <input type="text" class="form-control mb-2 mr-5" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
+            <input type="text" class="form-control mb-2 mr-5" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
+            <input type="text" class="form-control mb-2 mr-5" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
+        </form>
+    </div>
+    <div class="col-2">
 
-                <dt class="col-sm-2">Nachname</dt>
-                <dd class="col-sm-10" id="nachname"></dd>
+    </div>
+    <div class="col-6">
+        <dl class="row">
+            <dt class="col-sm-3">Vorname</dt>
+            <dd class="col-sm-9" id="vorname"></dd>
 
-                <dt class="col-sm-2">Geschlecht</dt>
-                <dd class="col-sm-10" id="geschlecht"></dd>
+            <dt class="col-sm-3">Nachname</dt>
+            <dd class="col-sm-9" id="nachname"></dd>
 
-                <dt class="col-sm-2">Geburtsdatum</dt>
-                <dd class="col-sm-10" id="geburtsdatum"></dd>
+            <dt class="col-sm-3">Geschlecht</dt>
+            <dd class="col-sm-9" id="geschlecht"></dd>
 
-                <dt class="col-sm-2">Blutgruppe</dt>
-                <dd class="col-sm-10" id="blutgruppe"></dd>
+            <dt class="col-sm-3">Geburtsdatum</dt>
+            <dd class="col-sm-9" id="geburtsdatum"></dd>
 
-                <dt class="col-sm-2">Notfallkontakt</dt>
-                <dd class="col-sm-10" id="notfallkontakt"></dd>
-            </dl>
-        </div>
-        <div class="col-sm-6">
-            <form>
-                <input type="text" class="form-control mb-2" id="inputTitel" onkeyup="filterReportTable()" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="inputBeschreibung" onkeyup="filterReportTable()" placeholder="Beschreibung">
-                <input type="text" class="form-control mb-2" id="inputDatum" onkeyup="filterReportTable()" placeholder="Datum">
-                <input type="text" class="form-control mb-2" id="inputHochgeladenVon" onkeyup="filterReportTable()" placeholder="Hochgeladen von">
-            </form>
-        </div>
+            <dt class="col-sm-3">Blutgruppe</dt>
+            <dd class="col-sm-9" id="blutgruppe"></dd>
+
+            <dt class="col-sm-3">Notfallkontakt</dt>
+            <dd class="col-sm-9" id="notfallkontakt"></dd>
+        </dl>
     </div>
     <div class="row">
         <div class="col-sm-9">
