--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -51,9 +51,9 @@
                        placeholder="Hochgeladen von">
             </form>
         </div>
-        <div class="col-2">
+        <div class="col-1">
         </div>
-        <div class="col-6">
+        <div class="col-5">
             <dl class="row">
                 <dt class="col-sm-4">Vorname</dt>
                 <dd class="col-sm-8" id="vorname"></dd>
@@ -73,6 +73,13 @@
                 <dt class="col-sm-4">Notfallkontakt</dt>
                 <dd class="col-sm-8" id="notfallkontakt"></dd>
             </dl>
+        </div>
+        <div class="col-sm-2">
+            <form class="form-group">
+                <button type="button" class="btn btn-primary btn-block freigaben-button"
+                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
+                </button>
+            </form>
         </div>
     </div>
     <div class="row">
