--- a/oshealthrec-website/public/mitarbeiter/patient.html
+++ b/oshealthrec-website/public/mitarbeiter/patient.html
@@ -77,7 +77,7 @@
         <div class="col-sm-2">
             <form class="form-group">
                 <button type="button" class="btn btn-primary btn-block freigaben-button"
-                        onclick="window.location.href='/doktor/hochladen.html'">Hochladen
+                        onclick="window.location.href='/mitarbeiter/hochladen.html'">Hochladen
                 </button>
             </form>
         </div>
