--- a/oshealthrec-website/public/doktor/patienten.html
+++ b/oshealthrec-website/public/doktor/patienten.html
@@ -33,6 +33,9 @@
             <li class="nav-item active ml-5">
                 <a class="nav-link" href="patienten.html">Patienten</a>
             </li>
+            <li class="nav-item ml-5">
+                <a class="nav-link" href="qr-generator.html">QR-Code Generieren</a>
+            </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
             Log out
