--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -7,15 +7,15 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="../public/css/oshealthrec.css">
+    <link rel="stylesheet" href="../css/oshealthrec.css">
 
     <title>OSHealthRec</title>
-    <script type="text/javascript" src="js/qrcode.min.js"></script>
+    <script type="text/javascript" src="../js/qrcode.min.js"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
-        <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
+        <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -23,7 +23,7 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active ml-5">
+            <li class="nav-item ml-5">
                 <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
@@ -31,6 +31,9 @@
             </li>
             <li class="nav-item ml-5">
                 <a class="nav-link" href="patienten.html">Patienten</a>
+            </li>
+            <li class="nav-item active ml-5">
+                <a class="nav-link" href="qr-generator.html">QR-Code Generieren</a>
             </li>
         </ul>
         <button type="button" class="btn btn-secondary btn-sm ml-5">
@@ -60,7 +63,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<script src="../public/app.js"></script>
+<script src="../app.js"></script>
 
 </body>
 </html>
