--- a/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
+++ b/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../public/css/oshealthrec.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>OSHealthRec</title>
 </head>
 <body>
@@ -23,15 +25,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item ml-5">
-                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
+                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i> Dokumentenverwaltung</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5">
-            Log out
-        </button>
+        <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
