--- a/oshealthrec-website/public/mitarbeiter/patienten-suche.html
+++ b/oshealthrec-website/public/mitarbeiter/patienten-suche.html
@@ -10,30 +10,29 @@
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/oshealthrec.css">
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
     <title>OSHealthRec</title>
 </head>
 <body class="mitarbeiter-patienten-suche">
 <nav class="navbar navbar-expand-lg navbar-light bg-light mb-3">
     <a class="navbar-brand" href="profil.html">
-        <img src="../images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
+        <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ml-5">
-                <a class="nav-link" href="profil.html">Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="dokumentenverwaltung.html">Dokumentenverwaltung</a>
+                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i> Dokumentenverwaltung</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
-            Log out
-        </button>
+        <button class="btn material-icons" onclick="logout()">exit_to_app</button>
     </div>
 </nav>
 
