--- a/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
+++ b/oshealthrec-website/public/mitarbeiter/dokumentenverwaltung.html
@@ -50,12 +50,12 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col">
             <h3>Arztliste</h3>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-9">
+        <div class="col">
             <table class="table table-hover mt-3">
                 <thead>
                 <tr>
