--- a/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
+++ b/oshealthrec-website/Vorlagen/vorlage-mitarbeiter.html
@@ -40,25 +40,45 @@
 </nav>
 
 <div class="container">
-    <div class="row justify-content-center">
-        <div class="col-auto">
-            <div class="card bg-light">
+    <div class="row">
+        <div class="col-sm-12">
+            <h3>Patientensuche</h3>
+        </div>
+    </div>
+    <div class="row mb-1">
+        <div class="col">
+            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...
+            </button>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-5">
+            <div class="card bg-light mb-3 hidden" id="searchCard">
                 <div class="card-body">
-                    <dl class="">
-                        <dt class="">Vorname</dt>
-                        <dd class="" id="vorname"></dd>
-
-                        <dt class="">Nachname</dt>
-                        <dd class="" id="nachname"></dd>
-
-                        <dt class="">Geschlecht</dt>
-                        <dd class="" id="geschlecht"></dd>
-
-                        <dt class="">Geburtsdatum</dt>
-                        <dd class="" id="geburtsdatum"></dd>
-                    </dl>
+                    <form>
+                        <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterPatientTable()"
+                               placeholder="Name">
+                        <input type="text" class="form-control mb-2" id="inputGeburtsdatum"
+                               onkeyup="filterPatientTable()"
+                               placeholder="Gebutsdatum">
+                    </form>
                 </div>
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-10">
+            <table class="table table-hover">
+                <thead>
+                <tr>
+                    <th scope="col">Name</th>
+                    <th scope="col">Geburtsdatum</th>
+                </tr>
+                </thead>
+                <tbody id="patientenTabelle">
+
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
