--- a/oshealthrec-website/public/mitarbeiter/patienten-suche.html
+++ b/oshealthrec-website/public/mitarbeiter/patienten-suche.html
@@ -54,19 +54,30 @@
             <h3>Patientensuche</h3>
         </div>
     </div>
+    <div class="row mb-1">
+        <div class="col">
+            <button class="btn icon-inline" onclick="toggleSearch()"><i class="material-icons big">search</i> Suche...
+            </button>
+        </div>
+    </div>
     <div class="row">
         <div class="col-sm-5">
-            <form>
-                <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterPatientTable()"
-                       placeholder="Name">
-                <input type="text" class="form-control mb-2" id="inputGeburtsdatum" onkeyup="filterPatientTable()"
-                       placeholder="Gebutsdatum">
-            </form>
+            <div class="card bg-light mb-3 hidden" id="searchCard">
+                <div class="card-body">
+                    <form>
+                        <input type="text" class="form-control mb-2" id="inputName" onkeyup="filterPatientTable()"
+                               placeholder="Name">
+                        <input type="text" class="form-control mb-2" id="inputGeburtsdatum"
+                               onkeyup="filterPatientTable()"
+                               placeholder="Gebutsdatum">
+                    </form>
+                </div>
+            </div>
         </div>
     </div>
     <div class="row">
         <div class="col-sm-10">
-            <table class="table table-hover mt-5">
+            <table class="table table-hover">
                 <thead>
                 <tr>
                     <th scope="col">Name</th>
