--- a/oshealthrec-website/public/mitarbeiter/patienten-suche.html
+++ b/oshealthrec-website/public/mitarbeiter/patienten-suche.html
@@ -76,7 +76,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-10">
+        <div class="col">
             <table class="table table-hover">
                 <thead>
                 <tr>
