--- a/oshealthrec-website/public/mitarbeiter/hochladen.html
+++ b/oshealthrec-website/public/mitarbeiter/hochladen.html
@@ -19,17 +19,20 @@
     <a class="navbar-brand" href="profil.html">
         <img src="../public/images/OSHealthRec-Logo.png" alt="OSHealthRec Logo">
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item ml-5">
-                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span class="sr-only">(current)</span> </a>
+                <a class="nav-link" href="profil.html"><i class="material-icons big">account_circle</i> Profil <span
+                        class="sr-only">(current)</span> </a>
             </li>
             <li class="nav-item active ml-5">
-                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i> Dokumentenverwaltung</a>
+                <a class="nav-link" href="dokumentenverwaltung.html"><i class="material-icons big">folder</i>
+                    Dokumentenverwaltung</a>
             </li>
         </ul>
         <button class="btn material-icons" onclick="logout()">exit_to_app</button>
@@ -45,19 +48,23 @@
             <h3>Dokument hochladen</h3>
         </div>
     </div>
-    <div class="row">
-        <div class="col-sm-5">
-            <form class="mt-3">
-                <div class="progress mb-3 hidden" id="outerProgressbar">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" id="innerProgressbar"
-                         role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 0%"></div>
+    <div class="row justify-content-center mt-3">
+        <div class="col-auto">
+            <div class="card bg-light">
+                <div class="card-body">
+                    <form class="mt-3">
+                        <div class="progress mb-3 hidden" id="outerProgressbar">
+                            <div class="progress-bar progress-bar-striped progress-bar-animated" id="innerProgressbar"
+                                 role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"
+                                 style="width: 0%"></div>
+                        </div>
+                        <input type="file" class="form-control-file mb-2" id="datei">
+                        <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
+                        <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
+                        <button type="button" class="btn btn-primary" onclick="uploadReport()">Hochladen</button>
+                    </form>
                 </div>
-                <input type="file" class="form-control-file mb-2" id="datei">
-                <input type="text" class="form-control mb-2" id="titel" placeholder="Titel">
-                <input type="text" class="form-control mb-2" id="beschreibung" placeholder="Beschreibung">
-                <button type="button" class="btn btn-primary" onclick="uploadReport()">Hochladen</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
