--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -212,7 +212,7 @@
             doctorProfileArray.forEach(function (doctor) {
 
                 tableData.push({
-                    name: doctor.givenname + " " + doctor.surname,
+                    name: doctor.title + " " + doctor.givenname + " " + doctor.surname,
                     anschrift: doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country,
                     arztbezeichnung: doctor.medical_specialty,
                     button: "<button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='withdrawDoctor(\"" + doctor.personID + "\")'>Berechtigung entziehen</button>"
