--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -147,7 +147,7 @@
         // Gebe Informationen von allen Doktoren aus
         doctorArray.forEach(function (doctor) {
             tableData.push({
-                name: doctor.givenname + " " + doctor.surname,
+                name: doctor.title + " " + doctor.givenname + " " + doctor.surname,
                 anschrift: doctor.street + "<br />" + doctor.zipcode + " " + doctor.city + "<br />" + doctor.country,
                 arztbezeichnung: doctor.medical_specialty,
                 button: "<button type=\"button\" class=\"btn btn-outline-primary btn-block button-table\" onclick='approveDoctor(\"" + doctor.personID + "\")'>Hinzufügen</button>"
